--- a/html/assignment03.html
+++ b/html/assignment03.html
@@ -20,7 +20,9 @@
       <p>Lorem ipsum dolor sit amet.</p>
     </div>
 
-    <h2>Lorem, ipsum.</h2>
+    <div class="h2">
+      <h2>Lorem, ipsum.</h2>
+    </div>
 
     <div class="div4">
       <ul>
@@ -28,13 +30,8 @@
         <li>Sunt, unde.</li>
         <li>Illo, atque!</li>
         <li>Facilis, officiis.</li>
+        <li>Lorem, ipsum.</li>
       </ul>
-    </div>
-
-    <div class="div5">
-      <div class="box1"></div>
-      <div class="box2"></div>
-      <div class="box3"></div>
     </div>
   </body>
 </html>
