--- a/html/assignment03.html
+++ b/html/assignment03.html
@@ -33,5 +33,13 @@
         <li>Lorem, ipsum.</li>
       </ul>
     </div>
+
+    <div class="div5">
+      <ul>
+        <li class="li1">.</li>
+        <li class="li2">.</li>
+        <li class="li3">.</li>
+      </ul>
+    </div>
   </body>
 </html>
