--- a/html/assignment03.html
+++ b/html/assignment03.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../css/assignment03.css" />
+    <link rel="stylesheet" href="../assets/css/assignment03.css" />
   </head>
   <body>
     <h1>Lorem, ipsum dolor.</h1>
