--- a/html/assignment05.html
+++ b/html/assignment05.html
@@ -39,7 +39,7 @@
 
     <div class="days">
       <h2>DAYS OF WEEK</h2>
-      <ol>
+      <ol type="a">
         <li>Monday</li>
         <li>Tuesday</li>
         <li>Wednesday</li>
