--- a/html/assignment06.html
+++ b/html/assignment06.html
@@ -9,16 +9,19 @@
   </head>
   <body>
     <nav>
-      <!--  
       <ul>
-        <li><a href="">Products</a></li>
-        <li><a href="">Contact</a></li>
-        <li><a href="">Blog</a></li>
+        <li><span>🎅</span> <a href="">Products</a></li>
+        <li><span>🎅</span> <a href="">Contact</a></li>
+        <li><span>🎅</span> <a href="">Blog</a></li>
       </ul>
--->
-      <a href="">Products</a>
+
+      <!-- 
+        css kismi emojiyi cikarmadigi icin burdaki kisimda <span>🎅</span> kullanarak yaptim 
+       -->
+
+      <!-- <a href="">Products</a>
       <a href="">Contact</a>
-      <a href="">Blog</a>
+      <a href="">Blog</a> -->
     </nav>
   </body>
 </html>
