--- a/html/assignment06.html
+++ b/html/assignment06.html
@@ -16,7 +16,7 @@
       </ul>
 
       <!-- 
-        css kismi emojiyi cikarmadigi icin burdaki kisimda <span>🎅</span> kullanarak yaptim 
+        I could not make css to print 🎅 so I used <span>🎅</span> here for every list type
        -->
 
       <!-- <a href="">Products</a>
