--- a/html/pop-up-menu.html
+++ b/html/pop-up-menu.html
@@ -15,9 +15,8 @@
     />
   </head>
   <body>
-    <label for="bars" class="menuicon"><i class="fa-solid fa-bars"></i></label>
-
-    <input type="checkbox" id="bars" class="cbox" />
+    <label for="bars" class="menubars"><i class="fa-solid fa-bars"></i></label>
+    <input type="checkbox" id="bars" class="bars" />
 
     <div class="menubound">
       <ul class="menu">
