--- a/html/pop-up-menu.html
+++ b/html/pop-up-menu.html
@@ -13,18 +13,24 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <style>
+      .cbox:checked div.menu {
+        display: none;
+      }
+    </style>
   </head>
   <body>
-    <label for="bars" class="menubars"><i class="fa-solid fa-bars"></i></label>
-    <input type="checkbox" id="bars" class="bars" />
+    <!-- <label for="bars" class="menubars"><i class="fa-solid fa-bars"></i></label>
+    <input type="checkbox" id="bars" class="mbars" /> -->
 
-    <div class="menubound">
-      <ul class="menu">
-        <li><a href="">Ana Sayfa</a></li>
-        <li><a href="">Ürünler</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">İletişim</a></li>
-      </ul>
+    <label for="box">Check</label>
+    <input type="checkbox" id="box" class="cbox" />
+
+    <div class="menu">
+      <a href="">Ana Sayfa</a>
+      <a href="">Ürünler</a>
+      <a href="">Blog</a>
+      <a href="">İletişim</a>
     </div>
   </body>
 </html>
