--- a/html/shopping-cart.html
+++ b/html/shopping-cart.html
@@ -12,76 +12,110 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
-    <table class="table" border="1">
-      <thead class="head">
-        <tr>
-          <td>Ürün kodu</td>
-          <td>Ürün Adı</td>
-          <td>Miktar</td>
-          <td>Birim Fiyat</td>
-          <td>Ara Toplam</td>
-          <td></td>
-        </tr>
-      </thead>
-      <tbody class="body">
-        <tr>
-          <td>154654</td>
-          <td>Notebook</td>
-          <td>1</td>
-          <td>5.400₺</td>
-          <td>5.400₺</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>456466</td>
-          <td>Klavye</td>
-          <td>2</td>
-          <td>80₺</td>
-          <td>160₺</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>564646</td>
-          <td>Monitor</td>
-          <td>1</td>
-          <td>700₺</td>
-          <td>700₺</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>123598</td>
-          <td>Mouse</td>
-          <td>2</td>
-          <td>50₺</td>
-          <td>100₺</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>613448</td>
-          <td>Play Station</td>
-          <td>1</td>
-          <td>2.500₺</td>
-          <td>2.500₺</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>789799</td>
-          <td>Usb Bellek</td>
-          <td>3</td>
-          <td>120₺</td>
-          <td>360₺</td>
-          <td></td>
-        </tr>
-      </tbody>
-      <tfoot class="foot">
-        <tr>
-          <td colspan="4">TOPLAM</td>
-          <td>9.220₺</td>
-          <td></td>
-        </tr>
-      </tfoot>
-    </table>
+    <div>
+      <table class="table">
+        <thead class="head">
+          <tr>
+            <td>Ürün kodu</td>
+            <td>Ürün Adı</td>
+            <td>Miktar</td>
+            <td>Birim Fiyat</td>
+            <td>Ara Toplam</td>
+            <td></td>
+          </tr>
+        </thead>
+        <tbody class="body">
+          <tr>
+            <td>154654</td>
+            <td>Notebook</td>
+            <td>1</td>
+            <td>5.400₺</td>
+            <td>5.400₺</td>
+            <td>
+              <i class="fa-solid fa-pen-to-square"></i
+              ><i class="fa-regular fa-trash-can"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>456466</td>
+            <td>Klavye</td>
+            <td>2</td>
+            <td>80₺</td>
+            <td>160₺</td>
+            <td>
+              <i class="fa-solid fa-pen-to-square"></i
+              ><i class="fa-regular fa-trash-can"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>564646</td>
+            <td>Monitor</td>
+            <td>1</td>
+            <td>700₺</td>
+            <td>700₺</td>
+            <td>
+              <i class="fa-solid fa-pen-to-square"></i
+              ><i class="fa-regular fa-trash-can"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>123598</td>
+            <td>Mouse</td>
+            <td>2</td>
+            <td>50₺</td>
+            <td>100₺</td>
+            <td>
+              <i class="fa-solid fa-pen-to-square"></i
+              ><i class="fa-regular fa-trash-can"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>613448</td>
+            <td>Play Station</td>
+            <td>1</td>
+            <td>2.500₺</td>
+            <td>2.500₺</td>
+            <td>
+              <i class="fa-solid fa-pen-to-square"></i
+              ><i class="fa-regular fa-trash-can"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>789799</td>
+            <td>Usb Bellek</td>
+            <td>3</td>
+            <td>120₺</td>
+            <td>360₺</td>
+            <td>
+              <i class="fa-solid fa-pen-to-square"></i
+              ><i class="fa-regular fa-trash-can"></i>
+            </td>
+          </tr>
+        </tbody>
+        <tfoot class="foot">
+          <tr>
+            <td colspan="4">TOPLAM</td>
+            <td>9.220₺</td>
+            <td></td>
+          </tr>
+        </tfoot>
+      </table>
+
+      <button class="button1">
+        <i class="fa-solid fa-cart-shopping"></i>Alışveriş Devam
+      </button>
+      <button class="button2">
+        <i class="fa-solid fa-credit-card"></i>Ödemeye Geç
+      </button>
+    </div>
   </body>
 </html>
