--- a/html/shopping-cart.html
+++ b/html/shopping-cart.html
@@ -109,7 +109,8 @@
           </tr>
         </tfoot>
       </table>
-
+    </div>
+    <div class="buttons">
       <button class="button1">
         <i class="fa-solid fa-cart-shopping"></i>Alışveriş Devam
       </button>
