--- a/html/shopping-cart.html
+++ b/html/shopping-cart.html
@@ -21,100 +21,100 @@
     />
   </head>
   <body>
-    <div>
-      <table class="table">
-        <thead class="head">
-          <tr>
-            <td>Ürün kodu</td>
-            <td>Ürün Adı</td>
-            <td>Miktar</td>
-            <td>Birim Fiyat</td>
-            <td>Ara Toplam</td>
-            <td></td>
-          </tr>
-        </thead>
-        <tbody class="body">
-          <tr>
-            <td>154654</td>
-            <td>Notebook</td>
-            <td>1</td>
-            <td>5.400₺</td>
-            <td>5.400₺</td>
-            <td>
-              <i class="fa-solid fa-pen-to-square"></i
-              ><i class="fa-regular fa-trash-can"></i>
-            </td>
-          </tr>
-          <tr>
-            <td>456466</td>
-            <td>Klavye</td>
-            <td>2</td>
-            <td>80₺</td>
-            <td>160₺</td>
-            <td>
-              <i class="fa-solid fa-pen-to-square"></i
-              ><i class="fa-regular fa-trash-can"></i>
-            </td>
-          </tr>
-          <tr>
-            <td>564646</td>
-            <td>Monitor</td>
-            <td>1</td>
-            <td>700₺</td>
-            <td>700₺</td>
-            <td>
-              <i class="fa-solid fa-pen-to-square"></i
-              ><i class="fa-regular fa-trash-can"></i>
-            </td>
-          </tr>
-          <tr>
-            <td>123598</td>
-            <td>Mouse</td>
-            <td>2</td>
-            <td>50₺</td>
-            <td>100₺</td>
-            <td>
-              <i class="fa-solid fa-pen-to-square"></i
-              ><i class="fa-regular fa-trash-can"></i>
-            </td>
-          </tr>
-          <tr>
-            <td>613448</td>
-            <td>Play Station</td>
-            <td>1</td>
-            <td>2.500₺</td>
-            <td>2.500₺</td>
-            <td>
-              <i class="fa-solid fa-pen-to-square"></i
-              ><i class="fa-regular fa-trash-can"></i>
-            </td>
-          </tr>
-          <tr>
-            <td>789799</td>
-            <td>Usb Bellek</td>
-            <td>3</td>
-            <td>120₺</td>
-            <td>360₺</td>
-            <td>
-              <i class="fa-solid fa-pen-to-square"></i
-              ><i class="fa-regular fa-trash-can"></i>
-            </td>
-          </tr>
-        </tbody>
-        <tfoot class="foot">
-          <tr>
-            <td colspan="4">TOPLAM</td>
-            <td>9.220₺</td>
-            <td></td>
-          </tr>
-        </tfoot>
-      </table>
-    </div>
+    <div class="bounds"></div>
+
+    <table class="table">
+      <thead class="head">
+        <tr>
+          <td>Ürün kodu</td>
+          <td>Ürün Adı</td>
+          <td>Miktar</td>
+          <td>Birim Fiyat</td>
+          <td>Ara Toplam</td>
+          <td></td>
+        </tr>
+      </thead>
+      <tbody class="body">
+        <tr>
+          <td>154654</td>
+          <td>Notebook</td>
+          <td>1</td>
+          <td>5.400₺</td>
+          <td>5.400₺</td>
+          <td>
+            <i class="fa-solid fa-pen-to-square"></i
+            ><i class="fa-regular fa-trash-can"></i>
+          </td>
+        </tr>
+        <tr>
+          <td>456466</td>
+          <td>Klavye</td>
+          <td>2</td>
+          <td>80₺</td>
+          <td>160₺</td>
+          <td>
+            <i class="fa-solid fa-pen-to-square"></i
+            ><i class="fa-regular fa-trash-can"></i>
+          </td>
+        </tr>
+        <tr>
+          <td>564646</td>
+          <td>Monitor</td>
+          <td>1</td>
+          <td>700₺</td>
+          <td>700₺</td>
+          <td>
+            <i class="fa-solid fa-pen-to-square"></i
+            ><i class="fa-regular fa-trash-can"></i>
+          </td>
+        </tr>
+        <tr>
+          <td>123598</td>
+          <td>Mouse</td>
+          <td>2</td>
+          <td>50₺</td>
+          <td>100₺</td>
+          <td>
+            <i class="fa-solid fa-pen-to-square"></i
+            ><i class="fa-regular fa-trash-can"></i>
+          </td>
+        </tr>
+        <tr>
+          <td>613448</td>
+          <td>Play Station</td>
+          <td>1</td>
+          <td>2.500₺</td>
+          <td>2.500₺</td>
+          <td>
+            <i class="fa-solid fa-pen-to-square"></i
+            ><i class="fa-regular fa-trash-can"></i>
+          </td>
+        </tr>
+        <tr>
+          <td>789799</td>
+          <td>Usb Bellek</td>
+          <td>3</td>
+          <td>120₺</td>
+          <td>360₺</td>
+          <td>
+            <i class="fa-solid fa-pen-to-square"></i
+            ><i class="fa-regular fa-trash-can"></i>
+          </td>
+        </tr>
+      </tbody>
+      <tfoot class="foot">
+        <tr>
+          <td colspan="4">TOPLAM</td>
+          <td>9.220₺</td>
+          <td></td>
+        </tr>
+      </tfoot>
+    </table>
     <div class="buttons">
-      <button class="button1">
+      <button type="button" class="button1">
         <i class="fa-solid fa-cart-shopping"></i>Alışveriş Devam
       </button>
-      <button class="button2">
+      <button type="button" class="button2">
         <i class="fa-solid fa-credit-card"></i>Ödemeye Geç
       </button>
     </div>
