--- a/html/shopping-cart.html
+++ b/html/shopping-cart.html
@@ -21,8 +21,6 @@
     />
   </head>
   <body>
-    <div class="bounds"></div>
-
     <table class="table">
       <thead class="head">
         <tr>
@@ -110,13 +108,12 @@
         </tr>
       </tfoot>
     </table>
-    <div class="buttons">
-      <button type="button" class="button1">
-        <i class="fa-solid fa-cart-shopping"></i>Alışveriş Devam
-      </button>
-      <button type="button" class="button2">
-        <i class="fa-solid fa-credit-card"></i>Ödemeye Geç
-      </button>
-    </div>
+    <div class="buttons"></div>
+    <button type="button" class="button1">
+      <i class="fa-solid fa-cart-shopping"></i>Alışveriş Devam
+    </button>
+    <button type="button" class="button2">
+      <i class="fa-solid fa-credit-card"></i>Ödemeye Geç
+    </button>
   </body>
 </html>
