--- a/html/login-screen.html
+++ b/html/login-screen.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../assets/css/login-screen.css">
+    <link rel="stylesheet" href="../assets/css/login-screen.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -13,29 +13,33 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Open+Sans&family=Poppins:wght@200;400&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Open+Sans&family=Poppins:wght@200;400&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="templet">
-        <div class="signin">
-            
-            <a href=""><i class="fa-regular fa-circle-left"></i>&nbsp;&nbsp;Return home</a>
-            <h2>SIGN IN</h2>
-            <form action="">
-                <input class="id" type="text" id="username" name="username">
-                <br><br>
-                <input class="pw" type="text" id="password" name="password">
-            </form>
+      <div class="signin">
+        <a href=""
+          ><i class="fa-regular fa-circle-left"></i>&nbsp;&nbsp;Return home</a
+        >
+        <h2>SIGN IN</h2>
+        <form action="">
+          <input class="id" type="text" id="username" name="username" />
+          <br /><br />
+          <input class="pw" type="text" id="password" name="password" />
+        </form>
 
-            <button class="enter" type="button">LET'S GO</button>
-        </div>
+        <button class="enter" type="button">LET'S GO</button>
+      </div>
 
-        <div class="design">
-            <h1>LONYX</h1>
-            <h3>A UX BASED CREATIVE AGENCEY</h3>
-        </div>
+      <div class="design">
+        <h1>LONYX</h1>
+        <h3>A UX BASED CREATIVE AGENCEY</h3>
+      </div>
     </div>
-</body>
+  </body>
 </html>
