--- a/html/login-screen.html
+++ b/html/login-screen.html
@@ -22,18 +22,23 @@
   </head>
   <body>
     <div class="templet">
-      <div class="signin">
-        <a href=""
-          ><i class="fa-regular fa-circle-left"></i>&nbsp;&nbsp;Return home</a
-        >
-        <h2>SIGN IN</h2>
-        <form action="">
-          <input class="id" type="text" id="username" name="username" />
-          <br /><br />
-          <input class="pw" type="text" id="password" name="password" />
-        </form>
-
-        <button class="enter" type="button">LET'S GO</button>
+      <div class="log">
+        <div class="go-home">
+          <a href=""
+            ><i class="fa-regular fa-circle-left arrow"></i>&nbsp;&nbsp;Return home</a
+          >
+        </div>
+        <div class="signin">
+          <h2>SIGN IN</h2>
+          <form action="">
+            <input class="id" type="text" id="username" name="username" />
+            <br /><br />
+            <input class="pw" type="text" id="password" name="password" />
+          </form>
+        </div>
+        <div>
+          <button class="enter" type="button">LET'S GO</button>
+        </div>
       </div>
 
       <div class="design">
