--- a/html/login-screen.html
+++ b/html/login-screen.html
@@ -36,8 +36,8 @@
             <input class="pw" type="text" id="password" name="password" />
           </form>
         </div>
-        <div>
-          <button class="enter" type="button">LET'S GO</button>
+        <div class="enter">
+          <button>LET'S GO</button>
         </div>
       </div>
 
