--- a/html/login-screen.html
+++ b/html/login-screen.html
@@ -31,9 +31,9 @@
         <div class="signin">
           <h2>SIGN IN</h2>
           <form action="">
-            <input class="id" type="text" id="username" name="username" />
+            <input class="id" type="text" id="username" name="username" placeholder="USERNAME"/>
             <br /><br />
-            <input class="pw" type="text" id="password" name="password" />
+            <input class="pw" type="text" id="password" name="password" placeholder="PASSWORD" />
           </form>
         </div>
         <div class="enter">
