--- a/html/pop-up-menu.html
+++ b/html/pop-up-menu.html
@@ -13,25 +13,20 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <style>
-      .cbox:checked div.menu {
-        display: none;
-      }
-    </style>
   </head>
   <body>
     <!-- <label for="bars" class="menubars"><i class="fa-solid fa-bars"></i></label>
     <input type="checkbox" id="bars" class="mbars" /> -->
 
-    
-    <input type="checkbox" id="box" class="cbox" />
-    <label for="box">Check</label>
-
     <div class="menu">
-      <a href="">Ana Sayfa</a>
-      <a href="">Ürünler</a>
-      <a href="">Blog</a>
-      <a href="">İletişim</a>
+      <input type="checkbox" id="box" class="cbox" />
+
+      <ul class="menu">
+        <li><a href="">Ana Sayfa</a></li>
+        <li><a href="">Ürünler</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">İletişim</a></li>
+      </ul>
     </div>
   </body>
 </html>
