--- a/html/pop-up-menu.html
+++ b/html/pop-up-menu.html
@@ -19,9 +19,12 @@
     <input type="checkbox" id="bars" class="mbars" /> -->
 
     <div class="menu">
+      
+      <label for="box" class="menubars"><i class="fa-solid fa-bars"></i></label>
       <input type="checkbox" id="box" class="cbox" />
+      
 
-      <ul class="menu">
+      <ul class="menulist">
         <li><a href="">Ana Sayfa</a></li>
         <li><a href="">Ürünler</a></li>
         <li><a href="">Blog</a></li>
